java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/StaticInitializer.java
<error descr="Initializers are not allowed in compact source files" textAttributesKey="ERRORS_ATTRIBUTES">static {

}</error>

void main() {

}